--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #애플리케이션 포트 설정
-servet.port=80
+server.port=80
 
 #MySQL 연결 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #쿼리에 물음표로 출력되는 바인드 파라미터 출력
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+#Thymeleaf cache 사용중지
+spring.thymeleaf.cache=false
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
