--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,19 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <!-- (종료) 유효성검증 -->
+        <!-- (시작) 시큐리티 테스트 -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- (종료) 시큐리티 테스트 -->
+        <!-- (시작) 인가작업 -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+        <!-- (종료) 인가작업 -->
     </dependencies>
 
     <build>
