--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,5 +7,8 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
 spring.datasource.password=
 
+# 테스트 환경 테이블 자동 생성
+spring.jpa.hibernate.ddl-auto=create
+
 # H2 데이터베이스 방언 설정
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
