--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #애플리케이션 포트 설정
-server.port=80
+server.port=8080
 
 #MySQL 연결 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,5 +19,17 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #Thymeleaf cache 사용중지
 spring.thymeleaf.cache=false
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# 파일 한 개당 최대 사이즈
+spring.servlet.multipart.max-file-size=20MB
+
+# 요청당 최대 파일 크기
+spring.servlet.multipart.max-request-size=100MB
+
+# 상품 이미지 읽어올 경로
+itemImgLocation=C:/tools/dingkoshop/item
+
+# 리소스 업로드 경로
+uploadPath=file:///C:/tools/dingkoshop/
