--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #애플리케이션 포트 설정
-server.port=8080
+server.port=80
 
 #MySQL 연결 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -29,7 +29,9 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # 상품 이미지 읽어올 경로
-itemImgLocation=C:/tools/dingkoshop/item
+#itemImgLocation=C:/tools/dingkoshop/item
+itemImgLocation=C:/Users/yonse/dev/imgFiles
 
 # 리소스 업로드 경로
-uploadPath=file:///C:/tools/dingkoshop/
+#uploadPath=file:///C:/tools/dingkoshop/
+uploadPath=file:///C:/Users/yonse/dev/
